act on @RecordBuilder and @RecordUpdater; rename done() to build()